5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4155/executions/1575_2896.log
== SUBMITION (2019-03-12 23:00:26) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("python")

# Impressao de saidas
print(pynthon)
-- EXECUTION TIME:
0.199664
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2896/main.py", line 4, in <module>
    var = imput("python")
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:01:33) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("python")

# Impressao de saidasprint(var)
print(pynthon)
-- EXECUTION TIME:
0.123486
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2896/main.py", line 4, in <module>
    var = imput("python")
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 23:01:41) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("python")

# Impressao de saida sprint(var)
print(pynthon)
-- EXECUTION TIME:
0.151686
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2896/main.py", line 4, in <module>
    var = imput("python")
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:34:42) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = imput("python")

# Impressao de saida sprint(var)
print(var)
-- EXECUTION TIME:
0.213665
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1575/2896/main.py", line 4, in <module>
    var = imput("python")
NameError: name 'imput' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:35:32) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("python")

# Impressao de saida sprint(var)
print(var)
-- EXECUTION TIME:
0.159171
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
